# lnn

./: .gitignore  config.toml  project_code.md  pyproject.toml
core/: __init__.py  backtest.py  config.py  events.py  features.py  model.py  trainer.py  types.py  walk_forward.py
tests/: __init__.py  test_backtest.py  test_events.py  test_features.py  test_model.py  test_trainer.py
ui/: __init__.py  app.py
ui/pages/: 2_📥_Data.py  3_🧠_Model.py  4_📈_Backtest.py
